--- a/PizzaBuilder/.project
+++ b/PizzaBuilder/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Mod3Lab</name>
+	<name>PizzaBuilder</name>
 	<comment></comment>
 	<projects>
 	</projects>
